--- a/inspect_jags.Rmd
+++ b/inspect_jags.Rmd
@@ -8,60 +8,72 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r}
-p_load(R2jags) ; p_load(coda) ; p_load(bayesplot)
-#p_load(CalvinBayes)
-p_load(dplyr)
-p_load(mcmcplots)
-install.packages("R2jags")
+install.packages("pacman")
+library(pacman)
+p_load(R2jags) ; p_load(coda) ; p_load(bayesplot) ; p_load(dplyr) ; p_load(mcmcplots)
 ```
 
 ```{r}
-load("jags13.Rdata") #jags_output Rdata object
-load("jags13.mcmc") #list of 3...
+#LITTLE FUNCTION SO WE CAN LOAD THE SAVED JAGS OBJECT AND CALL IT WHAT WE WANT
+loadRData <- function(fileName){
+#loads an RData file, and returns it
+    load(fileName)
+    get(ls()[ls() != "fileName"])
+}
+
+#seed 13, vals 0-20:
+#load("jags_output0.Rdata")
+#load("jags13_0.mcmc")
+
+output <- loadRData("jags_output0.RData") #load samples (jags object)
+mc <- loadRData("jags13_0.mcmc") #load mcmc object (created from jags object)
 ```
 
 ```{r}
 #LOOK AT IT
-glimpse(jags_output)
-summary(jags_output)
-glimpse(jags13.mcmc)
-#summary(jags13.mcmc) #takes forever
+glimpse(output)
+glimpse(mc)
+summary(output)
+#summary(mc) #takes forever to run
 
-#prøv enkeltvis
-test <- jags_output$BUGSoutput$sims.list$omega[,2,9] #shape: jags runs, participant, round
-test
-hist(test)
-density(test)$x[which(density(test)$y==max(density(test)$y))]
+#INSPECT THE JAGS OUTPUT SHAPE A BIT MORE...:
+output$parameters.to.save #the parameters we saved
+#PBETA
+dim(output$BUGSoutput$sims.list$pbeta) #pbeta is of the dimension 12000, 264
+head(output$BUGSoutput$sims.list$pbeta) #confused - are these an estimate per chain? VERY different!
 
-#LOOP
-params <- jags_output$parameters.to.save
-params <- list("omega", "lambda", "gamma", "p0", "pbeta")
+test <- output$BUGSoutput$sims.list$pbeta[,1] #just for participant 1
+hist(test) #can see it's pretty uniform - a bad sign...?
+density(test)$x[which(density(test)$y==max(density(test)$y))] #MAP estimate 
 
+
+
+
+#LOOP (SCRAPPED...)
+params <- list("lambda", "gamma", "p0", "pbeta")
 for (param in params) {
   print(param)
-  test <- jags_output$BUGSoutput$sims.list$param[,2,9] #shape: jags runs, participant, round
+  test <- output$BUGSoutput$sims.list$param[,1] #shape: ?
   print(test)
   hist(test)
   density(test)$x[which(density(test)$y==max(density(test)$y))]
-    
 }
-  
-
-
-  test <- samples$BUGSoutput$sims.list$pbeta[,5] #shape: jags runs, participant, round
-  hist(test)
-  density(test)$x[which(density(test)$y==max(density(test)$y))]
-  
-  dim(samples$BUGSoutput$sims.list$gamma)
-  
-  mcyay <- as.mcmc(samples)
 ```
-
-```{r}
 #PLOTS
-par(mar=c(1,1,1,1)) #fix figure margins too large error ... NOT WORKING
+```{r}
+plot(output) #WHAT THE HECK IS GOING ON IN THIS PLOT???
+#plot(mc) #takes forever to run, uh oh...
+
+#try this:
+#posterior <- as.array(output)
+#dim(posterior)
+
+mcmc_intervals(output, pars = c("pbeta", "lambda"))
+
+
+par(mar=c(1,1,1,1)) #fix figure margins too large error ... NOT WORKING D:
 #typed dev.off()
-denplot(jags_output)
+denplot(output)
 denplot(jags13.mcmc)
 ```
 
@@ -69,12 +81,7 @@ denplot(jags13.mcmc)
 
 #NOTHING works without having jags installed :/ but here are some things to try on Ucloud:
 ```{r}
-bayesmix::plot(jags_output)
-
 pp.check(x, observed, simulated, xlab='Observed data', ylab='Simulated data', 
                      main='Posterior Predictive Check', ...)
-
-
-jags13.mcmc
 ```
 
